# test_task_incident_recorder

./: .gitignore  Makefile  Readme.md  pyproject.toml
docker/: app.Dockerfile  app.yaml  nginx.yaml  storages.yaml
nginx/: nginx.conf
src/apps/incidents/: models.py  serializers.py  urls.py  views.py
src/apps/incidents/migrations/: 0001_initial.py
src/core/: asgi.py  wsgi.py
src/core/settings/: base.py  test.py
src/core/urls/: base.py  swagger.py
tests/incidents/: test_incidents.py
